@@ -3,6 +3,7 @@
     * Display lock path if failed to lock.
     * Create lock directory if necessary.
     * Fix bug: No option 'login_window_background'
+    * Do not install Realplayer. It cannot be removed by yum.
 
 2010-06-27 Homer Xing <homer.xing@gmail.com>
 
